# mdbom

./: .buildinfo  .copier-answers.yml  .coveragerc  .gitignore  3rd-party-template.md.jinja  3rd-party.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  duties.py  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  versions.json
.doctrees/: environment.pickle  index.doctree
.doctrees/usage/: bom.doctree  generate.doctree  installation.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd-test.yml  cd.yml  ci.yml
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/bom/: index.html
0.2.1/changelog/: index.html
0.2.1/contributing/: index.html
0.2.1/install/: index.html
0.2.1/license/: index.html
0.2.1/markdown/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/bom/: index.html
0.2.2/changelog/: index.html
0.2.2/contributing/: index.html
0.2.2/install/: index.html
0.2.2/license/: index.html
0.2.2/markdown/: index.html
0.2.3/: 404.html  index.html  sitemap.xml
0.2.3/bom/: index.html
0.2.3/changelog/: index.html
0.2.3/contributing/: index.html
0.2.3/install/: index.html
0.2.3/license/: index.html
0.2.3/markdown/: index.html
0.2.4/: 404.html  index.html  sitemap.xml
0.2.4/bom/: index.html
0.2.4/changelog/: index.html
0.2.4/contributing/: index.html
0.2.4/install/: index.html
0.2.4/license/: index.html
0.2.4/markdown/: index.html
0.2.4/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/bom/: index.html
0.3.0/changelog/: index.html
0.3.0/contributing/: index.html
0.3.0/install/: index.html
0.3.0/license/: index.html
0.3.0/markdown/: index.html
0.3.0/search/: search_index.json
_sources/: index.rst.txt
_sources/usage/: generate.rst.txt
config/: pytest.ini
dev/: 404.html  index.html  sitemap.xml
dev/bom/: index.html
dev/changelog/: index.html
docs/: 3rd-party.md  bom.md  index.md  install.md  markdown.md
examples/: template.md.jinja
mdbom/: mdbom.py
scripts/: multirun.sh  setup.sh
tests/: test_mdbom.py
usage/: bom.html  generate.html  installation.html
(+38 files in other folders)
