[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mdbom"
version = "0.2.2"
description = "Transform SBOM to Markdown"
authors = ["Robert Hansel <code@fam-hansel.de>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/HaRo87/mdbom"
homepage = "https://haro87.github.io/mdbom/"
include = [
    "README.md",
    "pyproject.toml"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
duty = "^0.6.0"
flakehell = "^0.9.0"
flake8-black = "^0.2.1"
flake8-builtins = "^1.5.3"
flake8-tidy-imports = "^4.2.1"
flake8-variables-names = "^0.0.4"
flake8-pytest-style = "^1.3.0"
git-changelog = "^0.4.2"
httpx = "^0.16.1"
# TODO: accept v5 once https://github.com/wemake-services/wemake-python-styleguide/issues/1584 is resolved
isort = {version = "<5", extras = ["pyproject"]}
jinja2-cli = "^0.7.0"
mypy = "^0.800"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-randomly = "^3.5.0"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.2.0"
toml = "^0.10.2"
wemake-python-styleguide = "^0.14.1"
safety = "^1.10.3"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.5"
mike = "^1.0.1"

[tool.poetry.scripts]
mdb = "mdbom.mdbom:cli"

[tool.black]
line-length = 80
exclude = "tests/fixtures"

[tool.flakehell]
exclude = ["duties.py", "tests/*", "docs/*", "__init__.py"]
# fix flakehell error according to https://github.com/flakehell/flakehell/issues/10#issuecomment-822720074
extended_default_ignore=[]

[tool.flakehell.plugins]
"*" = [
    "+*",
    "-RST*",  # we write docstrings in markdown, not rst
    "-D105",  # missing docstring in magic method
    "-D212",  # multi-line docstring summary should start at the first line
    "-Q000",  # black already deals with quoting
    "-S101",  # use of assert
    "-C0301",  # line too long
    "-WPS305",  # f-strings
    "-WPS110", # wrong var name
    "-WPS323", # string formatting
    "-WPS604", # pass in class
    "-W503", # line break before binary operator
    "-D401", # imperative mood
]
